kubernetes/deployments/ingress/ingress-hosts-rules.yaml
#---------------------------------------------------------------------
# Manifest File to create Ingress Rules for Hosts
#---------------------------------------------------------------------
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hosts

spec:
  rules:
    - host: "pugachev.fun"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 8080

#    - host: "www.form.pugachev.fun"
#      http:
#        paths:
#          - path: "/"
#            pathType: Prefix
#            backend:
#              service:
#                name: apache-http
#                port:
#                  number: 80
