kubernetes/deployments/ingress/ingress-paths-rules.yaml
#---------------------------------------------------------------------
# Manifest File to create Ingress Rules for Host Paths
#---------------------------------------------------------------------
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-paths

spec:
  rules:
    - host: www.app.net
      http:
        paths:
          - path: "/page1"
            backend:
              serviceName: webx
              servicePort: 80

          - path: "/page2"
            backend:
              serviceName: webx
              servicePort: 80

          - path: "/page3"
            backend:
              serviceName: webx
              servicePort: 80
