kubernetes/deployments/ingress/ingress-resource-hosts.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource-hosts
spec:
  ingressClassName: nginx
  rules:
    - host: main.pugachev.fun
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-deploy-main
                port:
                  number: 80
    - host: blue.pugachev.fun
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-deploy-blue
                port:
                  number: 80
    - host: green.pugachev.fun
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-deploy-green
                port:
                  number: 80
