kubernetes/deployments/ingress/ingress-resource-path.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: ingress-resource-3
spec:
  ingressClassName: nginx
  rules:
    - host: pugachev.fun
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-deploy-main
                port:
                  number: 80
          - path: /blue
            pathType: Prefix
            backend:
              service:
                name: nginx-deploy-blue
                port:
                  number: 80
          - path: /green
            pathType: Prefix
            backend:
              service:
                name: nginx-deploy-green
                port:
                  number: 80
